Aligned boxes, corrected text formatting

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-weight: normal;
 }
 
 :root {
@@ -26,20 +27,42 @@ img {
     margin: 48px auto 28px;
     width: 800px;
 }
+main{
+    padding: 24px;
+}
 
+section+section{
+    margin-top: 24px;
+}
+
+p+p{
+    padding-top: 12px;
+}
 h1 {
     font-size: 40px;
     line-height: 140%;
-    color: #291B1A;
 }
 
 h2 {
     font-size: 24px;
+    line-height: 150%;
+}
+
+h1,h2{
     color: #291B1A;
+    padding-bottom: 4px;
+}
+
+ul{
+    padding-left: 24px;
 }
 
 footer {
     color: #F0E8C2;
     text-align: center;
     padding-bottom: 48px;
+}
+
+footer img{
+    vertical-align: middle;
 }
